<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">VineSight</string>
    <string name="widget_name">Weather Widget</string>
</resources>
